# tic-tac-toe-term

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmd/: main.cpp
include/: Board.h  Game.h  Renderer.h  utils.h
src/: Board.cpp  Game.cpp  Renderer.cpp  utils.cpp
